Webpack config file updated, more components added, animation with JS and jQuery added.

--- a/src/styles/components/_all.scss
+++ b/src/styles/components/_all.scss
@@ -2,8 +2,10 @@
 // @import "section";
 @import "icon";
 @import "header";
+@import "animations";
 @import "hero";
 @import "second-section";
 @import "form-section";
+@import "carousel";
+@import "banner-last-section.scss";
 @import "footer";
-@import "main-banner";
