--- a/src/views/components/carousel.pug
+++ b/src/views/components/carousel.pug
@@ -1,10 +1,19 @@
 section.carousel-section
-    #carouselExampleSlidesOnly.carousel.slide(data-ride="carousel")
-        .carousel-inner
-            .carousel-item.active
-                img(src="http://localhost:5500/dist/images/product1.png" alt="product1").d-block.w-100
-            .carousel-item
-                img(src="http://localhost:5500/dist/images/product2.png" alt="product2").d-block.w-100
-            .carousel-item
-                img(src="http://localhost:5500/dist/images/product3.png" alt="product3").d-block.w-100 
-    
+    .container-fluid
+        .row
+            .col-12.col-carousel
+                h2.products.text-center CHECK OUT OUR PRODUCTS
+                .carousel1
+                    .carousel-item-img
+                        img(src="http://localhost:5500/dist/images/product1.png" alt="product1").d-block
+                    .carousel-item-img
+                        img(src="http://localhost:5500/dist/images/product2.png" alt="product2").d-block
+                    .carousel-item-img
+                        img(src="http://localhost:5500/dist/images/product3.png" alt="product3").d-block
+                    .carousel-item-img
+                        img(src="http://localhost:5500/dist/images/product4.png" alt="product4").d-block
+                    .carousel-item-img
+                        img(src="http://localhost:5500/dist/images/product5.png" alt="product5").d-block
+                    .carousel-item-img
+                        img(src="http://localhost:5500/dist/images/product6.png" alt="product6").d-block
+                button.btn.d-block SEE ALL 
