--- a/src/views/components/footer.pug
+++ b/src/views/components/footer.pug
@@ -1,8 +1,7 @@
-footer.background-dark-blue
+footer
     .container
         .row
             .col-12.col-lg-auto.company-col
-                img(src="https://via.placeholder.com/186x30" alt="EasyBank")
                 ul.social-links
                     li
                         a(href="#")
@@ -24,17 +23,13 @@ footer.background-dark-blue
                     li
                         a(href="#") About Us
                     li
-                        a(href="#") Contact
-                    li
-                        a(href="#") Blog
+                        a(href="#") Products
                 ul
                     li
-                        a(href="#") Careers
+                        a(href="#") Dealers
                     li
-                        a(href="#") Support
-                    li
-                        a(href="#") Privacy Policy
+                        a(href="#") Contact Us
             .col-12.col-lg-auto.extra-col
-                a.btn(href="#") Request Invite
+                img#logo.d-block(src="http://localhost:5500/dist/images/logo.svg" alt="logo")   
                 p
-                    | © Easybank. All Rights Reserved.
+                    | © OrangeSeal. All Rights Reserved.
