--- a/src/views/components/hero.pug
+++ b/src/views/components/hero.pug
@@ -2,6 +2,6 @@ section.hero-section
     .container-fluid
         .row.justify-content-center
             .col-auto
-                .content-wrapper
+                .content-wrapper.animation-element.slide-top
                     h1 READY FOR ANYTHING.
                     button.btn.btn-outline-primary BUY NOW
