--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -1,107 +1,110 @@
 footer {
-    padding: 45px 0;
-    text-align: center;
-  
+  padding: 45px 0;
+  text-align: center;
+
+  @include l-screen {
+    text-align: left;
+  }
+
+  ul {
+    @include no-list-style;
+  }
+
+  .social-links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 35px;
+
     @include l-screen {
-      text-align: left;
+      justify-content: flex-start;
+      margin-top: 50px;
     }
-  
-  
-    ul {
-      @include no-list-style;
-    }
-  
-    .social-links {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-top: 35px;
-  
-      @include l-screen {
-        justify-content: flex-start;
-        margin-top: 50px;
+
+    li {
+      &:not(:last-child) {
+        margin-right: 15px;
       }
-  
-  
-      li {
-        &:not(:last-child) {
-          margin-right: 15px;
+
+      a {
+        text-decoration: none;
+
+        svg {
+          width: 25px;
+          height: auto;
+          fill: color(rgb(90, 79, 79));
+
+          @include transition(
+            fill $transition-base-duration $transition-base-ease
+          );
         }
-  
-        a {
-          text-decoration: none;
-  
+
+        &:hover {
           svg {
-            width: 25px;
-            height: auto;
-            fill: color(white);
-  
-            @include transition(fill $transition-base-duration $transition-base-ease);
-          }
-  
-          &:hover {
-            svg {
-              fill: color(primary);
-            }
+            fill: color(primary);
           }
         }
-      }
-    }
-  
-    .menu-col {
-      margin-top: 35px;
-  
-      @include l-screen {
-        margin-top: 0;
-        display: flex;
-        padding-left: 120px;
-      }
-  
-  
-      ul {
-        &:not(:last-child) {
-          @include l-screen {
-            margin-right: 120px;
-          }
-        }
-  
-        &, li {
-          &:not(:last-child) {
-            margin-bottom: 24px;
-          }
-        }
-  
-        li {
-          a {
-            color: color(white);
-            font-size: 14px;
-            text-decoration: none;
-  
-            @include transition(color $transition-base-duration $transition-base-ease);
-  
-            &:hover {
-              color: color(primary);
-            }
-          }
-        }
-      }
-    }
-  
-    .extra-col {
-      margin-top: 40px;
-  
-      @include l-screen {
-        margin-top: 0;
-        text-align: right;
-      }
-  
-  
-      .btn {
-        margin-bottom: 35px;
-      }
-  
-      p {
-        font-size: 14px;
       }
     }
   }
+
+  .menu-col {
+    margin-top: 35px;
+
+    @include l-screen {
+      margin-top: 0;
+      display: flex;
+      padding-left: 120px;
+    }
+
+    ul {
+      &:not(:last-child) {
+        @include l-screen {
+          margin-right: 120px;
+        }
+      }
+
+      &,
+      li {
+        &:not(:last-child) {
+          margin-bottom: 24px;
+        }
+      }
+
+      li {
+        a {
+          color: black;
+          font-size: 14px;
+          text-decoration: none;
+
+          @include transition(
+            color $transition-base-duration $transition-base-ease
+          );
+
+          &:hover {
+            color: color(primary);
+          }
+        }
+      }
+    }
+  }
+
+  .extra-col {
+    margin-top: 40px;
+
+    @include l-screen {
+      margin-top: 0;
+      text-align: right;
+    }
+
+    #logo {
+      margin: auto;
+      max-width: 180px;
+      width: 180px;
+    }
+
+    p {
+      font-size: 14px;
+    }
+  }
+}
