--- a/src/styles/components/form-section.scss
+++ b/src/styles/components/form-section.scss
@@ -14,6 +14,9 @@ section.form-section {
   }
 
   form.row {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+
     .col-8 {
       padding: 5px 0;
       display: flex;
