--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -5,7 +5,8 @@
   padding-top: 100px;
   margin: 0;
   text-align: center;
-  background: linear-gradient(rgba(black, 0.5), rgba(black, .6)), url("http://localhost:5500/dist/images/bike1.jpeg");
+  background: linear-gradient(rgba(black, 0.5), rgba(black, 0.6)),
+    url("http://localhost:5500/dist/images/bike1.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -30,7 +31,8 @@
     h1 {
       font-weight: bold;
       color: color(white);
-      margin-bottom: 20px;;
+      margin-bottom: 20px;
     }
   }
+  
 }
