--- a/src/views/components/second-section.pug
+++ b/src/views/components/second-section.pug
@@ -1,14 +1,14 @@
 section.second-section
     .container-fluid
-        .row.second-section-row.justify-content-center.align-items-center
-            .col-md-7.animation-element.slide-right
+        .row.second-section-row.justify-content-center.align-items-center.slide-top.animation-element
+            .col-md-7
                 .first-image
                     img(src="http://localhost:5500/dist/images/manOrangeSeal-upt.jpg" alt="city woman bycicle")
                           
                 .second-image
                     img(src="http://localhost:5500/dist/images/womanOrangeSeal-cut.jpg" alt="city man bycicle")
                   
-            .col-md-5.text-center.animation-element.slide-left
+            .col-md-5.text-center
                 h2.heading FOR WHEREVER LIFE TAKES YOU.
                 p.paragraph Rugged construction, bike-lane legal, a 30mph top speed and a 30 mile range per charge. Zoomers are a perfect way to get wherever you're going.
                 button.btn.btn-variation BUY NOW
