--- a/src/views/components/second-section.pug
+++ b/src/views/components/second-section.pug
@@ -10,5 +10,5 @@ section.second-section
                   
             .col-md-5.text-center
                 h2.heading FOR WHEREVER LIFE TAKES YOU.
-                p.paragraph Rugged construction, bike-lane legal, a 30mph top speed and a 30 mile range per charge. Zoomers are a perfect way to get wherever you're going.
+                p.paragraph Our tire sealant allows you to repair flat tires fast and effectively in order to let you get back on the trail within seconds. Prevents and repairs flat tires for bikes and dirt bikes.
                 button.btn.btn-variation BUY NOW
